--- a/shopware/core/6.4/root/sonar-project.properties
+++ b/shopware/core/6.4/root/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=KrmeHerbrandBundle
+sonar.projectKey=KrmePluginReplaceThis
 
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=KruseMedien Herbrand Bundle
+sonar.projectName=KruseMedien ReplaceThis Bundle
 # defaults to 'not provided'
 sonar.projectVersion=1.0
 
@@ -16,5 +16,5 @@ sonar.sources=src
 sonar.host.url=https://sonarqube.krusemedien.online
 
 sonar.test.inclusions=**/*.spec.js
-sonar.coverage.exclusions=src/KrmeHerbrandBundle.php,src/Entities/**/*,src/Resources/app/administration/test/**/*,src/Resources/config/**/*,src/Resources/app/administration/jest.config.js,src/Resources/config/Synonyms.php,src/KlarnaPayment/**/*,src/PromotionGift/**/*
+sonar.coverage.exclusions=src/KrmePluginReplaceThis.php,src/Entities/**/*,src/Resources/app/administration/test/**/*,src/Resources/config/**/*,src/Resources/app/administration/jest.config.js,src/Resources/config/Synonyms.php,src/KlarnaPayment/**/*,src/PromotionGift/**/*
 sonar.exclusions=src/Resources/app/administration/coverage/**,vendor-builder.php,tests/app/**,src/Resources/app/administration/node_modules/**,src/Migration/**,src/Resources/views/email/**
