--- a/.github/workflows/flex-update.yml
+++ b/.github/workflows/flex-update.yml
@@ -2,7 +2,7 @@ name: Update Flex endpoint
 on:
     push:
         branches:
-            - main
+            - develop
 defaults:
     run:
         shell: bash
